<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/arrow_back"
        android:layout_margin="20dp"
        />

    <ImageView
        android:id="@+id/avatarImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/backButton"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_margin="50dp"
        android:src="@drawable/avatar"/>

    <TextView
        android:id="@+id/helloUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello_username"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/avatarImage"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        />

    <TextView
        android:id="@+id/editProfileText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_my_profile"
        android:textColor="@color/teal_500"
        app:layout_constraintTop_toBottomOf="@id/helloUserName"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        android:textSize="16sp"/>

    <EditText
        android:id="@+id/editUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginVertical="20dp"
        android:background="@drawable/edit_text_drawable"
        android:hint="Edit username"
        android:paddingHorizontal="15dp"
        android:paddingVertical="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="username"
        app:layout_constraintTop_toBottomOf="@+id/editProfileText"
        tools:ignore="HardcodedText" />

    <EditText
        android:id="@+id/editEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginVertical="20dp"
        android:background="@drawable/edit_text_drawable"
        android:hint="@string/edit_email"
        android:paddingHorizontal="15dp"
        android:paddingVertical="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/user_email_gmail_com"
        app:layout_constraintTop_toBottomOf="@+id/editUsername" />

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginVertical="20dp"
        android:background="@drawable/edit_text_drawable"
        android:hint="@string/edit_password"
        android:inputType="textPassword"
        android:paddingHorizontal="15dp"
        android:paddingVertical="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/hello"
        app:layout_constraintTop_toBottomOf="@+id/editEmail" />

    <Button
        android:id="@+id/editProfileButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginVertical="30dp"
        android:background="@drawable/button_drawable"
        android:text="@string/edit_my_profile_text"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editPassword" />

    <Button
        android:id="@+id/logoutButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginVertical="10dp"
        android:background="@drawable/button_logout_drawable"
        android:text="@string/logout"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editProfileButton" />


</androidx.constraintlayout.widget.ConstraintLayout>